a few personal changes

--- a/.env
+++ b/.env
@@ -3,3 +3,6 @@ DB_PORT=3306
 DB_USER=root
 DB_PASSWORD=
 DB_NAME=disisolves_system
+DATABASE_URL="mysql://root@localhost:3306/disisolves_system"
+
+
